--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -38,15 +38,13 @@ body {
 
 .side-bar li {
     margin: 10px 15px 10px 18px;
-    cursor: pointer;
     font-weight: bold;
     font-size: 18px;
     padding: 10px;
     border-radius: 12px;
-}
-
-.side-bar li:active {
-    transform: translate(-1px, -1px);
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
 }
 
 .side-bar {
@@ -55,4 +53,17 @@ body {
 
 .active {
     filter: brightness(1.3);
+}
+
+.side-bar li:not(.active) {
+    cursor: pointer;
+}
+
+.side-bar li:hover:not(.active) {
+    filter: brightness(0.93);
+    transform: scale(1.02);
+}
+
+.side-bar li:active:not(.active) {
+    transform: translate(-1px, -1px);
 }
