--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,6 +3,7 @@
     --ligter-black: #31363f;
     --cyan: #76ABAE;
     --dirty-white: #EEEEEE;
+    --side-bar-w: 200px;
 }
 
 html,
@@ -19,7 +20,7 @@ html,
 body {
     height: 100vh;
     display: grid;
-    grid-template-columns: 200px 1fr;
+    grid-template-columns: var(--side-bar-w) 1fr;
     grid-template-rows: 80px 1fr;
 }
 
@@ -32,38 +33,45 @@ body {
     box-shadow: inset 0px -3px 5px -4px rgb(255, 255, 255);
 }
 
-.side-bar ul {
-    list-style: none;
-}
-
-.side-bar li {
-    margin: 10px 15px 10px 18px;
-    font-weight: bold;
-    font-size: 18px;
-    padding: 10px;
+.side-bar button {
+    margin: 2px 10px;
+    font-weight: 100;
+    font-size: 16px;
+    padding: 10px 20px;
     border-radius: 12px;
+    border: none;
     user-select: none;
+    width: calc(var(--side-bar-w) - 20px);
+    text-align: left;
+    cursor: pointer;
     -moz-user-select: none;
     -webkit-user-select: none;
 }
 
 .side-bar {
+    margin-top: 10px;
     border-right: 1px solid var(--black);
 }
 
-.active {
-    filter: brightness(1.3);
+.nav-list-filter .active {
+    filter: brightness(0.9);
+    font-weight: 500;
 }
 
-.side-bar li:not(.active) {
-    cursor: pointer;
+.side-bar button:hover:not(.active) {
+    filter: brightness(0.9);
 }
 
-.side-bar li:hover:not(.active) {
-    filter: brightness(0.93);
-    transform: scale(1.02);
-}
-
-.side-bar li:active:not(.active) {
+.side-bar button:active:not(.active) {
     transform: translate(-1px, -1px);
+}
+
+.project-header {
+    font-size: 22px;
+    font-weight: 600;
+    margin: 20px 0 5px 20px;
+    cursor: default;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
 }
