--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -7,6 +7,8 @@
     --todo-btn-geometry: 16px;
     --todo-btn-w: 20px;
     --todo-btn-hover-color: cyan;
+    --todo-checkbox-geometry: 15px;
+    --todo-item-gap: 10px;
 }
 
 html,
@@ -92,9 +94,14 @@ body {
     margin: 5px;
     border-radius: 5px;
     display: grid;
-    grid-template-columns: 15px 1fr 74px var(--todo-btn-w) var(--todo-btn-w);
+    grid-template-columns:
+        var(--todo-checkbox-geometry)
+        1fr
+        74px
+        var(--todo-btn-w)
+        var(--todo-btn-w);
     padding: 10px 15px;
-    gap: 10px;
+    gap: var(--todo-item-gap);
 }
 
 .todo-item * {
@@ -151,10 +158,6 @@ body {
     transform: scale(1.02);
 }
 
-.todo-item .title:active {
-    transform: scale(1.005);
-}
-
 .add-btn {
     margin-top: 10px;
     padding: 10px;
@@ -163,4 +166,42 @@ body {
     border: none;
     background-color: var(--black);
     cursor: pointer;
+}
+
+input[type="checkbox"] {
+    opacity: 0;
+    cursor: pointer;
+    z-index: 1;
+}
+
+input[type="checkbox"] + label {
+    position: relative;
+}
+
+input[type="checkbox"] + label::before {
+    content: '';
+    width: var(--todo-checkbox-geometry);
+    height: var(--todo-checkbox-geometry);
+    position: absolute;
+    top: 1px;
+    left: calc( calc(var(--todo-checkbox-geometry) + var(--todo-item-gap)) * -1);
+    background: white;
+    border: 1px solid white;
+    border-radius: 3px;
+}
+
+input[type="checkbox"]:checked + label::before {
+    content: '\002714';
+    font-size: 11px;
+    font-weight: 100;
+    background-color: var(--lighter-black);
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+input[type="checkbox"]:checked + label {
+    text-decoration: line-through;
+    color: gray;
 }
