--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -205,3 +205,83 @@ input[type="checkbox"]:checked + label {
     text-decoration: line-through;
     color: gray;
 }
+
+.add-project-btn {
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    color: gray;
+    transition: all 500ms;
+}
+
+.add-project-btn::before {
+    color: gray;
+    content: '\002b';
+    font-size: 22px;
+    margin-right: 8px;
+    transition: all 500ms;
+}
+
+.add-project-btn:hover {
+    color: cyan;
+}
+
+.add-project-btn:hover::before {
+    color: cyan;
+}
+
+.add-project-input {
+    display: grid;
+    grid-template-areas: 
+        "name-input name-input"
+        "add-button cancel-button";
+    justify-content: center;
+    align-items: center;
+    row-gap: 8px;
+}
+
+.add-project-input input {
+    grid-area: name-input;
+    border: 1px solid gray;
+    width: 90%;
+    justify-self: center;
+    align-self: center;
+    height: 40px;
+    padding: 5px 10px;
+    border-radius: 18px;
+}
+
+.add-project-input input:focus {
+    outline: 1px solid #76ABAE;
+}
+
+.add-project-input .add-button {
+    grid-area: add-button;
+    background-color: rgb(47, 182, 141);
+}
+
+.add-project-input .cancel-button {
+    grid-area: cancel-button;
+    background-color: rgb(201, 57, 57);
+}
+
+.add-project-input button {
+    width: 90%;
+    padding: 10px 0;
+    text-align: center;
+}
+
+.hide-element {
+    display: none;
+}
+
+.project-container {
+    height: 20px;
+    width: 80%;
+    margin-left: 30px;
+}
+
+.project-name {
+    font-size: 16px;
+    font-weight: 100;
+}
