--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -198,7 +198,8 @@ input[type="checkbox"]:checked+label::before {
     justify-content: center;
 }
 
-input[type="checkbox"]:checked+label {
+input[type="checkbox"]:checked+label,
+input[type="checkbox"]:checked~.due-date {
     text-decoration: line-through;
     color: gray;
 }
@@ -334,39 +335,4 @@ input[type="checkbox"]:checked+label {
 
 .delete-project-btn svg:active {
     transform: scale(1.4);
-}
-
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
-}
-
-.modal-content {
-    background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-}
-
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
 }
