--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -59,11 +59,6 @@ body {
     border-right: 1px solid var(--black);
 }
 
-.nav-list-filter .active {
-    filter: brightness(0.9);
-    font-weight: 500;
-}
-
 .side-bar button:hover:not(.active) {
     filter: brightness(0.9);
 }
@@ -274,7 +269,7 @@ input[type="checkbox"]:checked~.due-date {
 }
 
 
-.nav-list-projects {
+.projects-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -303,6 +298,10 @@ input[type="checkbox"]:checked~.due-date {
     -ms-text-overflow: ellipsis;
     -o-text-overflow: ellipsis;
     text-wrap: nowrap;
+}
+
+.default > .ungroup {
+    width: 160px;
 }
 
 .project-container .delete-project-btn {
@@ -335,4 +334,9 @@ input[type="checkbox"]:checked~.due-date {
 
 .delete-project-btn svg:active {
     transform: scale(1.4);
+}
+
+.active {
+    filter: brightness(0.9);
+    font-weight: 500;
 }
